修复启用gzip压缩后KeepAlive失效的问题