@@ -36,7 +36,6 @@ import javax.script.ScriptException;
 import java.net.InetSocketAddress;
 import java.net.Proxy;
 import java.net.URI;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
@@ -90,7 +89,7 @@ public class AbemaTvLiveService extends LiveService {
             String slotId = matcher.group(2);
             Map<String, String> requestProperties = new HashMap<>();
             requestProperties.put("Authorization", "bearer " + bearer);
-            String slotInfo = HttpRequestUtil.downloadUrl(new URL("https://api.abema.io/v1/media/slots/" + slotId), null, requestProperties, StandardCharsets.UTF_8, JAPAN_PROXY);
+            String slotInfo = HttpRequestUtil.downloadUrl(new URI("https://api.abema.io/v1/media/slots/" + slotId), null, requestProperties, StandardCharsets.UTF_8, JAPAN_PROXY);
             JSONObject slotInfoObj = JSON.parseObject(slotInfo);
             String seriesId = slotInfoObj.getJSONObject("slot").getJSONArray("programs").getJSONObject(0).getJSONObject("series").getString("id");
             Calendar japanCalendar = Calendar.getInstance(TimeZone.getTimeZone("JST"));
@@ -98,7 +97,7 @@ public class AbemaTvLiveService extends LiveService {
             dateFormat.setCalendar(japanCalendar);
             long currentTimeMillis = System.currentTimeMillis();
             String formattedDate = dateFormat.format(currentTimeMillis);
-            String timetableInfo = HttpRequestUtil.downloadUrl(new URL(String.format("https://api.abema.io/v1/media?dateFrom=%s&dateTo=%s&channelIds=%s", formattedDate, formattedDate, channelId)), null, requestProperties, StandardCharsets.UTF_8, JAPAN_PROXY);
+            String timetableInfo = HttpRequestUtil.downloadUrl(new URI(String.format("https://api.abema.io/v1/media?dateFrom=%s&dateTo=%s&channelIds=%s", formattedDate, formattedDate, channelId)), null, requestProperties, StandardCharsets.UTF_8, JAPAN_PROXY);
             JSONArray channelSlots = JSON.parseObject(timetableInfo).getJSONArray("channelSchedules").getJSONObject(0).getJSONArray("slots");
             for (int i = 0; i < channelSlots.size(); i++) {
                 JSONObject channelSlot = channelSlots.getJSONObject(i);
@@ -109,15 +108,15 @@ public class AbemaTvLiveService extends LiveService {
                     String videoId = channelSlot.getString("id");
                     if (currentTimeMillis > startAt && currentTimeMillis < endAt) {
                         // 在节目播出时间内
-                        String tokenJSON = HttpRequestUtil.downloadUrl(new URL("https://api.abema.io/v1/media/token?osName=pc&osVersion=1.0.0&osLang=&osTimezone=&appVersion=v18.1025.2"), null, requestProperties, StandardCharsets.UTF_8, JAPAN_PROXY);
+                        String tokenJSON = HttpRequestUtil.downloadUrl(new URI("https://api.abema.io/v1/media/token?osName=pc&osVersion=1.0.0&osLang=&osTimezone=&appVersion=v18.1025.2"), null, requestProperties, StandardCharsets.UTF_8, JAPAN_PROXY);
                         String token = JSON.parseObject(tokenJSON).getString("token");
                         String mediaUrl = "https://linear-abematv.akamaized.net/channel/" + channelId + "/720/playlist.m3u8?ccf=0&kg=486";
-                        String m3u8File = HttpRequestUtil.downloadUrl(new URL(mediaUrl), StandardCharsets.UTF_8, JAPAN_PROXY);
+                        String m3u8File = HttpRequestUtil.downloadUrl(new URI(mediaUrl), StandardCharsets.UTF_8, JAPAN_PROXY);
                         Matcher keyMatcher = m3u8KeyPattern.matcher(m3u8File);
                         if (keyMatcher.find()) {
                             String lt = keyMatcher.group(2);
                             byte[] iv = Hex.decodeHex(keyMatcher.group(3));
-                            String licenseJson = HttpRequestUtil.downloadUrl(new URL("https://license.abema.io/abematv-hls?t=" + token), null, "{\"lt\":\"" + lt + "\",\"kv\":\"wd\",\"kg\":486}", StandardCharsets.UTF_8, JAPAN_PROXY);
+                            String licenseJson = HttpRequestUtil.downloadUrl(new URI("https://license.abema.io/abematv-hls?t=" + token), null, "{\"lt\":\"" + lt + "\",\"kv\":\"wd\",\"kg\":486}", StandardCharsets.UTF_8, JAPAN_PROXY);
                             String cid = JSON.parseObject(licenseJson).getString("cid");
                             String k = JSON.parseObject(licenseJson).getString("k");
                             VideoInfo videoInfo = new VideoInfo(channelInfo, videoId, videoTitle, new URI(mediaUrl), "m3u8");
