@@ -25,7 +25,6 @@ import site.alice.liveman.model.VideoInfo;
 import site.alice.liveman.utils.HttpRequestUtil;
 
 import java.net.URI;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -37,14 +36,14 @@ public class ShowRoomLiveService extends LiveService {
 
     @Override
     protected VideoInfo getLiveVideoInfo(ChannelInfo channelInfo) throws Exception {
-        String channelHtml = HttpRequestUtil.downloadUrl(new URL(channelInfo.getChannelUrl()), StandardCharsets.UTF_8, null);
+        String channelHtml = HttpRequestUtil.downloadUrl(new URI(channelInfo.getChannelUrl()), StandardCharsets.UTF_8, null);
         Matcher matcher = initDataPattern.matcher(channelHtml);
         if (matcher.find()) {
             JSONObject liveDataObj = JSON.parseObject(matcher.group(1));
             if (liveDataObj.getBoolean("isLive")) {
                 String videoId = liveDataObj.getString("liveId");
                 String videoTitle = liveDataObj.getString("roomName");
-                URL m3u8ListUrl = new URL(liveDataObj.getString("streamingUrlHls"));
+                URI m3u8ListUrl = new URI(liveDataObj.getString("streamingUrlHls"));
                 String[] m3u8List = HttpRequestUtil.downloadUrl(m3u8ListUrl, StandardCharsets.UTF_8, null).split("\n");
                 String mediaUrl = null;
                 for (int i = 0; i < m3u8List.length; i++) {
@@ -56,7 +55,7 @@ public class ShowRoomLiveService extends LiveService {
                 if (mediaUrl == null) {
                     mediaUrl = m3u8List[3];
                 }
-                return new VideoInfo(channelInfo, videoId, videoTitle, m3u8ListUrl.toURI().resolve(mediaUrl), "m3u8");
+                return new VideoInfo(channelInfo, videoId, videoTitle, m3u8ListUrl.resolve(mediaUrl), "m3u8");
             }
         }
         return null;
